--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>React Boilerplate</title>
 	<link rel="stylesheet" type="text/css" href="/public/styles/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Lobster+Two:400,700|Open+Sans" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
