--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>React Boilerplate</title>
-	<link rel="stylesheet" type="text/css" href="/public/styles/style.css">
+	<title>WesterBros</title>
+	<link rel="stylesheet" type="text/css" href="./public/styles/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Lobster+Two:400,700|Open+Sans" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
@@ -12,6 +12,6 @@
 	<div id="app">
 	</div>
 	<script src="https://www.gstatic.com/firebasejs/4.10.0/firebase.js"></script>
-	<script src="/public/scripts/app.js"></script>
+	<script src="./public/scripts/app.js"></script>
 </body>
 </html>
